blocks/profile.css
.profile{
  display: flex;
  margin: 0 auto;
  max-width: 880px;
  width: 100%;
}
.profile__content{
display: flex;
flex-direction: row;
align-items: center;
max-height: 100%;
width: 100%;
column-gap: 15px;

}
.profile__avatar{
 border-radius: 50%;
  width: 120px;
  height: 120px;
  margin-top: 36px;
  margin-right: 30px;
}
.profile__title{
  max-width:373px;
  width: 100%;
  font-size: 42px;
  font-weight: 500;
  line-height: 48px;
}
.profile__subtitle{
font-family: Inter;
font-size: 18px;
font-weight: 400;


}

.profile__title-btn {
  display: flex;
  align-items: center;
  gap: 18px;
}
.profile__btn-title:hover {
opacity: 0.6;
}
.profile__btn-title{
  background-color: #000;
  border: 1px solid #fff;
  padding: 3px 6px;
}
.profile__btn-add{
  border: 2px solid #fff;
  margin-left: auto;
  padding: 14px 64px;
  background-color: #000;
}
.profile__btn-add:hover {
  opacity: 0.6;
  }

@media screen and (max-width: 640px) {
  
  .profile__content{
    max-width: 600px;
    width: 100%;
    flex-direction: column;
    align-items: center;
    gap: 36px;
  }
  .profile__title{
    font-size: 22px;
  }
  .profile__subtitle{
    font-size: 14px;
    text-align: center;
    margin-top: 14px;
  }
  .profile__title-btn {
    gap: 10px;
  }
  .profile__btn-add {
    width: 100%;
  }
}

